--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["cargo-day","day01", "day02", "day03", "day04"]
+members = ["cargo-day","day01", "day02", "day03", "day04", "day05"]
 resolver = "2"
