new-day + day10

--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "cargo-day"
+name = "day10"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-toml_edit = "0.23.7"
+itertools = "0.14.0"
+sparse-bin-mat = "0.7.0"
