--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["cargo-day","day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09"]
+members = ["new-day","day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10"]
 resolver = "2"
